force-app/main/default/objects/Restaurant_Order__c/Restaurant_Order__c.object-meta.xml
<CustomObject>
    <label>Restaurant Order</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resturant Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>