force-app/main/default/objects/Restaurant_Order__c/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustomerId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resturant_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>