force-app/main/default/objects/Restaurant_Order__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <label>Delivery Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>