force-app/main/default/objects/Restaurant_Order__c/fields/Opening_Time__c.field-meta.xml
<CustomField>
    <fullName>Opening_Time__c</fullName>
    <label>Opening Time</label>
    <type>DateTime</type>
</CustomField>